Sun Apr 28 23:50:22 BST 2002  Colin Watson  <cjwatson@debian.org>

	Pass through much of the code adding 'const' where appropriate. This
	should help me avoid various memory management bugs.

	Noteworthy changes from this:

	* include/manconfig.h.in (struct compression): prog and ext
	  generally shouldn't be modified directly.
	* libdb/db_lookup.c (make_content): dash really has to stay
	  constant, or the various things that point to it statically will
	  break other things badly.
	* libdb/db_storage.h (struct mandata): The only pointers here that
	  should generally be modified directly are next and addr.
	* libdb/db_store.c (dbstore): Remove debugging code left from
	  previous checkin.
	* src/check_mandirs.c (splitline): Note that we're deliberately
	  modifying info->whatis here.
	  (filename_info): Modify to be more const-friendly.
	* src/compression.c (comp_file): Add TODO for comp->file.
	* src/man.c (find_cat_file): Drop unused sec argument, and update
	  callers.

	* include/manconfig.h.in, libdb/db_storage.h, src/hashtable.h,
	  src/man.h, src/manp.h: Update prototypes for all of the above.

Fri Apr 26 01:59:46 BST 2002  Colin Watson  <cjwatson@debian.org>

	Add case-insensitivity support to the database.

	* libdb/db_storage.h (struct mandata): Add 'name' element.
	* libdb/db_lookup.c (dbprintf): Print name.
	  (split_content): Read name from start of data.
	  (make_content): Prepend name to each data element.
	  (name_to_key): New function, converting a name to lowercase for
	  use in database keys.
	  (make_multi_key): Use name_to_key().
	  (dblookup): Use name_to_key(). If info->name is "-", set it to the
	  requested key instead.
	* libdb/db_delete.c (dbdelete): Use name_to_key().
	* libdb/db_store.c (dbstore): Likewise.

	* src/check_mandirs.c (make_filename): Use in->name if name is NULL.
	  (filename_info): Fill in info->name with either a new req_name
	  argument or the supplied base_name.
	  (test_manfile): Update calls to make_filename() and