@@ -1,3 +1,8 @@
+Mon Apr 29 00:00:38 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/whatis.c (use_grep): Put a space in the grep command before
+	  the flags!
+
 Sun Apr 28 23:50:22 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	Pass through much of the code adding 'const' where appropriate. This
